# -shill-bond

./: .npmrc  Anchor.toml  Compliance.md  LICENSE  README.md  SHILL_BOND_FINAL_STATUS.md  SHILL_BOND_READY.md  SHILL_BOND_SUCCESS.md  nixpacks.toml  package-lock.json  package.json  railway.json
api/: config.js  distribute.js  package.json  verify.js
apps/oracle/: package.json  tsconfig.json
apps/oracle/src/: index.ts  mongodb.ts
apps/web/: .env.local.backup  env.template  package.json
apps/web/src/app/: page.tsx
apps/web/src/app/api/auth/[...nextauth]/: route.ts
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/signup/developers/: page.tsx
apps/web/src/app/signup/shillers/: page.tsx
apps/web/src/app/test/: page.tsx
apps/web/src/components/providers/: session-provider.tsx
apps/web/src/components/solana/: solana-wallet-provider.tsx
apps/web/src/lib/: mongodb.ts
contracts/: Cargo.toml
contracts/programs/x402_protocol/: Cargo.toml
contracts/programs/x402_protocol/src/: lib.rs
frontend/: next.config.ts  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/test-twitter/: page.tsx
frontend/src/components/x402/: CampaignCreator.tsx  CampaignList.tsx  WalletProvider.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: mongodb.ts  twitter-auth.ts  x402-client.ts
sdk/: package.json
sdk/src/: index.ts
